--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.41",
+    "@types/node": "^16.18.44",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "ts-node": "^10.9.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/json-server": "^0.14.4",
+    "typescript": "^5.1.6"
   }
 }
